--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -16,11 +16,10 @@
 		</div>
 		<div>
 			<a href="/rango/">Index</a><br />
-			<img src="{{ MEDIA_URL }}cat.jpg"
-				alt = 'Picture of Cat' /> <!-- New Line -->
+			<img src="{{ MEDIA_URL }} cat.jpg" alt="Picture of Cat." />
 			<br />
 			<img src="{% static 'images/rango.jpg' %}"
-				alt = 'Picture of Rango' /> <!-- New Line -->
+				alt="Picture of Rango" /> <!-- New Line -->
 		</div>
 	</body>
 
