--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -16,10 +16,9 @@
 		</div>
 		<div>
 			<a href="/rango/">Index</a><br />
-			<img src="{{ MEDIA_URL }} cat.jpg" alt="Picture of Cat." />
+			<img src="{% static 'images/rango.jpg' %}" alt= "Picture of Rango" /> <!-- New Line -->
 			<br />
-			<img src="{% static 'images/rango.jpg' %}"
-				alt="Picture of Rango" /> <!-- New Line -->
+			<img src="{{ MEDIA_URL }}cat.jpg" alt= "Picture of Cat." />
 		</div>
 	</body>
 
