--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,29 +1,26 @@
-<!DOCTYPE html>
 
-<html>
-<head>
-	<title>Rango</title>
-</head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<body>
-	<div>
-		{% if category %}
-		<h1>{{ category.name}}</h1>
-		{% if pages %}
-		<ul>
-			{% for page in pages %}
-			<li><a href="{{ page.url }}" >{{ page.title}}</a></li>
-			{% endfor %}
-		</ul>
-			{% else %}
-				<strong>No pages currently in category.</strong>
-				{% endif %}
-				The Specified Category does not exist.
-			{% endif %}
-		</div>
-	<div>
-		<a href="/rango/">Index</a><br />
-	</div>
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
 
-	</body>
-</html>
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+
+        {% if pages %}
+            <ul>
+            {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <strong>No pages currently in category.</strong>
+        {% endif %}
+        <a href="{% url 'rango:add_page' category.slug %}">Add a Page</a>
+    {% else %}
+        The specified category does not exist!
+    {% endif %}
+{% endblock %}
