--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-{% load staticfiles %}  <!-- New Line -->
+{% block title_block %}
+Rango
 
+{% endblock %}
 
-	<head>
-		<title>Rango</title>
-	</head>
-
-	<body>
+{% block body_block %}
 		<h1>Rango says...</h1>
 		<div>
 			hey there partner!<br />
@@ -41,11 +39,8 @@
 	       	  		{% endif %}
 			</div>
 		<div>
-			<a href="/rango/about/">About</a><br />
 			<img src="{% static 'images/rango.jpg' %}"
 				alt = 'Picture of Rango' /> <!-- New Line -->
 		</div>
-	</body>
-
-</html>
+	{% endblock %}
 
