end of chapter 8

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -2,10 +2,11 @@
 {% load staticfiles %}
 
 {% block title_block %}
-		<h1>Rango says...</h1>
+		About Rango
 	{% endblock %}
 		{% block body_block %}
-			here is the about page.<br />
+		<h1>Rango says...</h1>
+			<h2>here is the about page.</h2><br />
 			<strong>{{ boldmessage }}</strong><br />
 		</div>
 		<div>
