--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -2,7 +2,9 @@
 {% load staticfiles %}
 
 		
-			{% block title_block %}Rango{% endblock %}		
+			{% block title_block %}
+			Add a Page.
+			{% endblock %}		
 
 		{% block body_block %}
 		<h1>Add page to {{ category.slug }}</h1><div>
