--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,7 +1,7 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
 {% block title_block %}
-    Add Category
+    Add a Category.
 {% endblock %}
 
 {% block body_block %}
