--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load rango_template_tags %}
 
 <html>
 	<head lang="en">
@@ -12,6 +13,11 @@
 		</title>
 	</head>
 	<body>
+		 <div>
+            {% block sidebar_block %}
+                {% get_category_list category%}
+            {% endblock %}
+        </div>
 		<div>
 			{% block body_block %}
 			{% endblock %}
@@ -21,7 +27,7 @@
 			<ul>
 				<li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
 				<li><a href="{% url 'rango:about' %}">About</a></li>
-				<li><a href="{% url 'rango:index' %}">Index</a></li>
+				<li><a href="{% url 'rango:index' %}">Home Page</a></li>
 			</ul>
 		</div>
 	</body>
