--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -18,7 +18,7 @@
             </ul>
         {% else %}
             <strong>No pages currently in category.</strong>
-        {% endif %}
+        {% if user.is_authenticated %}
         <a href="{% url 'rango:add_page' category.slug %}">Add a Page</a>
     {% else %}
         The specified category does not exist!
