--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -7,7 +7,11 @@
 		{% block body_block %}
 		<h1>Rango says...</h1>
 			<h2>here is the about page.</h2><br />
+			This tutorial has been put together by Mark Morrison
 			<strong>{{ boldmessage }}</strong><br />
+			{% if visits %}
+    		<p>visits: {{ visits }}</p>
+    		{% endif %}
 		</div>
 		<div>
 			<a href="/rango/">Index</a><br />
