--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,7 +10,7 @@
 			This tutorial has been put together by Mark Morrison
 			<strong>{{ boldmessage }}</strong><br />
 			{% if visits %}
-    		<p>visits: {{ visits }}</p>
+    		<p>Visits: {{ visits }}</p>
     		{% endif %}
 		</div>
 		<div>
