--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -36,7 +36,7 @@
 				{% endif %}
 				
 				<li><a href="{% url 'rango:about' %}">About</a></li>
-				<li><a href="{% url 'rango:index' %}">Home Page</a></li>
+				<li><a href="{% url 'rango:index' %}">Index</a></li>
 
 
 				
