--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -6,7 +6,7 @@
 
 {% block body_block %}
 <div>
-    <h1>Add a Category</h1>
+    <h1>Add a Category.</h1>
     <div>
         <form id="category_form" method="post" action="{% url 'rango:add_category' %}">
             {% csrf_token %}
